
2.8 beta
    - Applied bjoerntm's patch for making the loading of group information less sensitive
      to white space, in order to prevent trouble loading files written by other tools.
    - Added optional autocompletion of author/editor last names in search field.
    - Changed entry fetcher system so all fetchers are accessed from a single side pane
      component with a selector.
    - Added INSPIRE fetcher by Sheer El-Showk.
    - Improved error handling when importing in specific format.
    - Prevented crash when calling invalid import format on startup.
    - Improved duplicate detection.
    - Added markers \filename and \filepath for ".begin.layout" and ".end.layout" files
      in order to output the name or full path of the bib file of the exported database.
    - Fixed possible array index exception in LastPage formatter.
    - Improved author/editor normalization in entry editor.
    - Added metadata extraction from text when PDFs are dragged into JabRef.
    - The filename pattern for renaming a file when dropping a PDF can now be
      configured at "Options"/"Preferences"/"Import"/"File name format pattern".
    - The defaults of the ImportDialog shown when PDFs are dragged into JabRef
      can now be configured at "Options"/"Preferences"/"Import". It is possible to
      override showing the ImportDialog.
    - An entry can be sent by a right click on an entry and select "Send as Email"
      (patch 3306271).
    - Added option to "copy BibTeX key and title" (patch 3370471).
    - The command for pushing to emacs can be configured now. New command for Emacs 23.
      New default for Windows: emacsclient.
    - Added export support for DIN1505 style (based on patch 1874662).
    - Added support for PostgreSQL import/export (patch 3368760 by Fred Stevens).
    - Added formatter "JournalAbbreviator" (patch 3013311 by Meigel).
    - RTFExport: Replaces ligatures `` and '' with RTF control sequences {\ldblquote} and {\rdblquote}.