@@ -1,5 +1,7 @@
 
 2.8 beta
+    - Added keyboard shortcuts Ctrl-Up and Ctrl-Down to move file links up and down in a list
+      of external links in the entry editor.
     - Applied bjoerntm's patch for making the loading of group information less sensitive
       to white space, in order to prevent trouble loading files written by other tools.
     - Added optional autocompletion of author/editor last names in search field.
